# humanoid_navigation

./: .gitignore  CMakeLists.txt  README.md  stack.xml
footstep_planner/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  package.xml
footstep_planner/config/: footstep_planning.vcg  footsteps_asimo.yaml  footsteps_nao.yaml  footsteps_nao_OUTDATED.yaml  footsteps_nao_navigation.yaml  footsteps_nao_old.yaml  navigation_footsteps_nao.yaml  navigation_params.yaml  planning_params.yaml  planning_params_asimo.yaml  planning_params_nao.yaml  rviz_footstep_navigation.vcg  rviz_footstep_planning.rviz  rviz_footstep_planning_fuerte.vcg
footstep_planner/include/footstep_planner/: Astar.h  Dstar.h  Footstep.h  FootstepNavigation.h  FootstepPlanner.h  FootstepPlannerEnvironment.h  FootstepPlannerNode.h  Heuristic.h  PathCostHeuristic.h  PlanningState.h  PlanningStateChangeQuery.h  State.h  helper.h
footstep_planner/launch/: fake_loc_from_odom.launch  footstep_navigation.launch  footstep_navigation_complete.launch  footstep_navigation_nao.launch  footstep_navigation_nao_fake_loc.launch  footstep_navigation_nao_true_loc.launch  footstep_planner.launch  footstep_planner_complete.launch  footstep_planner_nao.launch  footstep_planner_rstar_complete.launch  rviz_footstep_navigation.launch  rviz_footstep_planning.launch  rviz_footstep_planning_fuerte.launch  true_loc_from_odom.launch
footstep_planner/maps/: sample.yaml  sample2.yaml
footstep_planner/scripts/: corrected_initialpose.py  plan_footsteps.py
footstep_planner/src/: Astar.cpp  Dstar.cpp  Footstep.cpp  FootstepNavigation.cpp  FootstepPlanner.cpp  FootstepPlannerEnvironment.cpp  FootstepPlannerNode.cpp  Heuristic.cpp  PathCostHeuristic.cpp  PlanningState.cpp  PlanningStateChangeQuery.cpp  State.cpp  footstep_navigation.cpp  footstep_planner.cpp  footstep_planner_walls.cpp  helper.cpp
footstep_planner/srv/: PlanFootsteps.srv
gridmap_2d/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
gridmap_2d/include/gridmap_2d/: GridMap2D.h
gridmap_2d/src/: GridMap2D.cpp
hrl_kinematics/: CMakeLists.txt  mainpage.dox  manifest.xml
hrl_kinematics/include/hrl_kinematics/: Kinematics.h  TestStability.h
hrl_kinematics/src/: Kinematics.cpp  TestStability.cpp  test_stability.cpp
humanoid_localization/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
humanoid_localization/config/: localization_conf_motion_test.yaml  localization_vis.vcg  nao_localization_laser.yaml
humanoid_localization/include/humanoid_localization/: EndpointModel.h  HumanoidLocalization.h  MapModel.h  MotionModel.h  ObservationModel.h  RaycastingModel.h  humanoid_localization_defs.h
humanoid_localization/launch/: nao_localization_laser.launch  nao_localization_test_motion.launch
humanoid_localization/src/: EndpointModel.cpp  HumanoidLocalization.cpp  MapModel.cpp  MotionModel.cpp  ObservationModel.cpp  RaycastingModel.cpp  localization_node.cpp
humanoid_nav_msgs/: mainpage.dox  manifest.xml
humanoid_nav_msgs/msg/: StepTarget.msg
humanoid_nav_msgs/srv/: PlanFootsteps.srv
humanoid_navigation/: CMakeLists.txt  package.xml
humanoid_planner_2d/: CMakeLists.txt  manifest.xml  package.xml
humanoid_planner_2d/include/humanoid_planner_2d/: SBPLPlanner2D.h
humanoid_planner_2d/src/: SBPLPlanner2D.cpp  humanoid_planner_2d.cpp
