<package>
  <name>gridmap_2d</name>
  <version>1.0.1</version>
  <description>

     gridmap_2d - a simple 2D gridmap structure, based on OpenCV's cv::Mat

  </description>
  <author>Armin Hornung</author>
  <maintainer email="HornungA@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/gridmap_2d</url>
  
  <build_depend>nav_msgs</build_depend>
  <build_depend>opencv2</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>opencv2</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
